--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ language: java
 arch:
   - amd64
   - ppc64le
-addons:
-  apt:
-    packages:
-      - ant
-install: ant deps
+before_install:
+  - sudo apt-get install ant
+script: 
+  - ant -f java/build.xml
